--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
     "expo": "^46.0.0",
+    "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "fs-extra": "^10.1.0",
     "react": "18.0.0",
