--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
       [
         "expo-image-picker",
         {
-          "photosPermission": "The app accesses your photos to let you share them with your friends."
+          "photosPermission": "Do you allow this app to access your photos?",
+          "cameraPermission": "Do you allow this app to use your camera?"
         }
       ]
     ],
