--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-image-crop-picker": "^0.38.1",
+    "react-native-mmkv": "^2.5.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-safe-area-view": "^1.1.1",
