--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rneui/themed": "^4.0.0-rc.6",
     "expo": "^46.0.0",
     "expo-image-picker": "~13.3.1",
+    "expo-sqlite": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "fs-extra": "^10.1.0",
     "react": "18.0.0",
@@ -40,6 +41,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.15.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.9",
